--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                 <div class="col-lg-12" style="position: relative; top: 30px">
                     <img src="img/logoHBlue_large.png" style="width: 100%">
                     <div class="intro-message" style="background">
-
                         <!-- h3>Because Art Should Be Dangerous</h3 -->
                         <div class="row">
                             <div class="col-sm-4 col-sm-offset-4">
@@ -132,15 +131,15 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                <div class="col-lg-12">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Who We Are</h2>
-                    <p class="lead">The Hydrocarbon Collective is a group of artists and engineers.  Operating out of the Berkeley Institute for Transchaotic Studies, we seek to create art that is dangerous, difficult, and challenging.</p>
+                    <h2 class="section-heading">About Me</h2>
+                    <p class="lead">I'm Matt Gordon.  I've been making art in one form or another as Hydrocarbon Collective since 2016.  I make interactive kinetic art, mostly for myself.</p>
                 </div>
-                   <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+<!--                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hcc_team.jpg" alt="The Box Shop, SF">
                 </div>
-            </div>
+ -->            </div>
 
         </div>
         <!-- /.container -->
@@ -157,11 +156,12 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="embed-responsive video"></div>
-                    <p class="lead"><iframe width="100%" height="315" src="https://www.youtube.com/embed/eYutKYTUJac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/eriAgnGue84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Happiness</h2>
-                    <p class="lead">
+                    <p class="lead"><i>Happiness</i> is a simple reflection on the ways in which simple symbols, like a curved line, can evoke an emotional response; but it also asks: why do we want to control happiness?
+                    
                     </p>
                 </div>
             </div>
@@ -192,11 +192,15 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="embed-responsive video"></div>
-                    <p class="lead"><iframe width="100%" height="315" src="https://www.youtube.com/embed/eYutKYTUJac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/uiaUDB51gik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Urgent Pendulum</h2>
-                    <p class="lead">
+                    <p class="lead">I started work on Urgent Pendulum at the beginning of Shelter-In-Place, in March 2020, using materials I had on hand.  The construction was done haphazardly, with a sense of urgency, as we were all immersed in a sense of panic at that time.  Over time I slowed down, but continued iterating on the initial design, until it reached a sort of stasis, in its current incarnation.
+
+                    The two radios are each actuated by a pair of rails with a ball bearing between them.  As the ball bearings roll back and forth, the radios turn on and off.  The mechanism is intentionally simple and comprehensible.  The effect is of a message coming in from far away, or from another time.  The message is garbled, and it's unclear what it means.
+
+                    Some parts of this sculpture, most notably the motor and motor controller, were repurposed from Torch Song, 2017.
                     </p>
                 </div>
             </div>
