--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="embed-responsive video"></div>
-                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/eriAgnGue84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                    <p class="lead"><iframe width="100%" height="315" src="https://www.youtube.com/embed/eriAgnGue84" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Happiness</h2>
@@ -192,7 +192,7 @@
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <div class="embed-responsive video"></div>
-                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/uiaUDB51gik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></p>
+                    <p class="lead"><iframe width="100%" height="315" src="https://www.youtube.com/embed/uiaUDB51gik" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe></p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Urgent Pendulum</h2>
