Added ad nauseum

--- a/index.html
+++ b/index.html
@@ -151,6 +151,23 @@
     <!-- /.content-section-a -->
 	<a  name="art"></a>
 
+    <div class="content-section-b">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <h2 class="section-heading">Ad Nauseum, 2020</h2>
+                    <p class="lead">2020 was a tough year for most of us.  Ths is my ode to The Year that Seemed Like it Would Never End.
+                    </p>
+
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <p class="lead"><iframe width="560" height="315" src="https://www.youtube.com/embed/EgL9kBPkL38" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
     <div class="content-section-a">
         <div class="container">
             <div class="row">
@@ -160,7 +177,7 @@
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <h2 class="section-heading">Happiness</h2>
-                    <p class="lead"><i>Happiness</i> is a simple reflection on the ways in which simple symbols, like a curved line, can evoke an emotional response; but it also asks: why do we want to control happiness?
+                    <p class="lead"><i>Happiness</i> is a reflection on the ways in which simple symbols, like a curved line, can evoke an emotional response; but it also asks: why do we want to control happiness?
                     
                     </p>
                 </div>
@@ -185,6 +202,7 @@
             </div>
 
         </div>
+    </div>
 
 
     <div class="content-section-a">
