--- a/drmattyg.html
+++ b/drmattyg.html
@@ -1,13 +1,14 @@
 <pre>
 Matthew P. Gordon, Ph.D.
-Twitter: <a href="http://twitter.com/drmattyg">@DrMattyG</a>
 e-mail: inverarity at The Big Company That Owns All Your Data That Starts with G
-<a href="http://github.com/drmattyg">Github</a>
-<a href="https://www.linkedin.com/in/drmattyg/">LinkedIn</a>
+Twitter: <a href="http://twitter.com/drmattyg">@DrMattyG</a>
+Instagram: <a href="http://instagram.com/hydrocarboncollective">@HydrocarbonCollective</a>
+Github: <a href="http://github.com/drmattyg">DrMattyG</a>
+LinkedIn: <a href="https://www.linkedin.com/in/drmattyg/">Matthew Gordon</a>
 
-Jobby Job: Senior Software Engineer and Director of Climate Initiatives at <a href="http://kairosaerospace.com">Kairos Aerospace</a>
-Unpaid Fake Job: Founder and Lead Architect at <a href="http://www.hydrocarboncollective.org">Hydrocarbon Collective</a>
-                 <a href="https://www.instagram.com/hydrocarboncollective/">Hydrocarbon Collective Instagram</a>
+Jobby Job: Principal Software Engineer at <a href="http://kairosaerospace.com">Kairos Aerospace</a>
+Side Hustle: Executive Director at <a href="http://climatetechaction.network">Climate Tech Action Network</a>
+Unpaid Fake Job: Chief Entropy Offficer at <a href="http://www.hydrocarboncollective.org">Hydrocarbon Collective</a>
 
 Publications:
 	- <a href="maybe rome had it coming.txt">Maybe Rome Had It Coming (poem)</a>, <a href="https://www.flipsnack.com/bwmag/beyond-words-magazine-issue-2-april-2020.html">Beyond Words Magazine, Issue 2, April 2020</a>
