--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="col-lg-12">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">About Me</h2>
-                    <p class="lead">I'm Matt Gordon.  I've been making art in one form or another as Hydrocarbon Collective since 2016.  I make interactive kinetic art, mostly for myself.</p>
+                    <p class="lead">I'm <a href="drmattyg.html">Matt Gordon</a>.  I've been making art in one form or another as Hydrocarbon Collective since 2016.  I make interactive kinetic art, mostly for myself.</p>
                 </div>
 <!--                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/hcc_team.jpg" alt="The Box Shop, SF">
